Issue #451: add TodoComment to checkstyle config