@@ -20,15 +20,13 @@
 
 package net.sf.eclipsecs.core.transformer.ctransformerclasses;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.StringTokenizer;
 
 import net.sf.eclipsecs.core.transformer.AbstractCTransformationClass;
 import net.sf.eclipsecs.core.transformer.FormatterConfiguration;
 
 /**
- * Wrapperclass for converting the checkstyle-rule WhitespaceAround to appropriate
+ * Wrapper class for converting the checkstyle-rule WhitespaceAround to appropriate
  * eclipse-formatter-rules.
  *
  */
@@ -36,20 +34,19 @@ public class WhitespaceAroundTransformer extends AbstractCTransformationClass {
 
   @Override
   public FormatterConfiguration transformRule() {
-    // TODO token SLIST TYPE_EXTENSION_AND
-    // LITERAL_ASSERT/DO/ELSE/FINALLY/TRY
     String tokens = getAttribute("tokens");
     if (tokens == null) {
-      tokens = "ASSIGN, BAND, BAND_ASSIGN, BOR, BOR_ASSIGN, BSR, BSR_ASSIGN, BXOR, BXOR_ASSIGN, COLON, DIV, "
-              + "DIV_ASSIGN, EQUAL, GE, GT, LAND, LCURLY, LE, LITERAL_ASSERT, LITERAL_CATCH, LITERAL_DO, "
-              + "LITERAL_ELSE, LITERAL_FINALLY, LITERAL_FOR, LITERAL_IF, LITERAL_RETURN, LITERAL_SYNCHRONIZED, "
-              + "LITERAL_TRY, LITERAL_WHILE, LOR, LT, MINUS, MINUS_ASSIGN, MOD, MOD_ASSIGN, NOT_EQUAL, PLUS, "
-              + "PLUS_ASSIGN, QUESTION, RCURLY, SL, SLIST, SL_ASSIGN, SR, SR_ASSIGN, STAR, STAR_ASSIGN";
+      tokens = "ARRAY_INIT, ASSIGN, BAND, BAND_ASSIGN, BOR, BOR_ASSIGN, BSR, BSR_ASSIGN, BXOR, BXOR_ASSIGN, "
+              + "COLON, DIV, DIV_ASSIGN, DO_WHILE, ELLIPSIS, EQUAL, GE, GENERIC_END, GENERIC_START, GT, LAMBDA, "
+              + "LAND, LCURLY, LE, LITERAL_ASSERT, LITERAL_CATCH, LITERAL_DO, LITERAL_ELSE, LITERAL_FINALLY, "
+              + "LITERAL_FOR, LITERAL_IF, LITERAL_RETURN, LITERAL_SWITCH, LITERAL_SYNCHRONIZED, LITERAL_TRY, "
+              + "LITERAL_WHEN, LITERAL_WHILE, LOR, LT, MINUS, MINUS_ASSIGN, MOD, MOD_ASSIGN, NOT_EQUAL, PLUS, "
+              + "PLUS_ASSIGN, QUESTION, RCURLY, SL, SLIST, SL_ASSIGN, SR, SR_ASSIGN, STAR, STAR_ASSIGN, "
+              + "TYPE_EXTENSION_AND, WILDCARD_TYPE";
     }
-    final StringTokenizer token = new StringTokenizer(tokens, ", ");
 
-    while (token.hasMoreTokens()) {
-      List<String> settings = switch (token.nextToken()) {
+    for (String token : tokens.split("\\s*,\\s*")) {
+      List<String> settings = switch (token) {
         case "ASSIGN", "BAND_ASSIGN", "BOR_ASSIGN", "BSR_ASSIGN",
              "BXOR_ASSIGN", "DIV_ASSIGN", "MINUS_ASSIGN", "MOD_ASSIGN",
              "PLUS_ASSIGN", "SL_ASSIGN", "SR_ASSIGN", "STAR_ASSIGN" -> List.of(
@@ -60,16 +57,12 @@ public class WhitespaceAroundTransformer extends AbstractCTransformationClass {
              "MOD", "NOT_EQUAL", "PLUS", "SL", "SR", "STAR" -> List.of(
                 "insert_space_after_binary_operator",
                 "insert_space_before_binary_operator");
-        case "COLON" -> List.of(
-                "insert_space_before_colon_in_for",
-                "insert_space_after_colon_in_for",
-                "insert_space_before_colon_in_conditional",
+        case "COLON" -> List.of("insert_space_before_colon_in_for",
+                "insert_space_after_colon_in_for", "insert_space_before_colon_in_conditional",
                 "insert_space_after_colon_in_conditional");
-        case "QUESTION" -> List.of(
-                "insert_space_before_question_in_conditional",
+        case "QUESTION" -> List.of("insert_space_before_question_in_conditional",
                 "insert_space_after_question_in_conditional");
-        case "LCURLY" -> List.of(
-                "insert_space_before_opening_brace_in_type_declaration",
+        case "LCURLY" -> List.of("insert_space_before_opening_brace_in_type_declaration",
                 "insert_space_after_opening_brace_in_array_initializer",
                 "insert_space_before_opening_brace_in_annotation_type_declaration",
                 "insert_space_before_opening_brace_in_block",
@@ -80,17 +73,24 @@ public class WhitespaceAroundTransformer extends AbstractCTransformationClass {
                 "insert_space_before_opening_brace_in_switch",
                 "insert_space_before_opening_brace_in_anonymous_type_declaration",
                 "insert_space_before_opening_brace_in_array_initializer");
-        case "RCURLY" -> List.of(
-                "insert_space_after_closing_brace_in_block",
+        case "RCURLY" -> List.of("insert_space_after_closing_brace_in_block",
                 "insert_space_before_closing_brace_in_array_initializer");
         case "LITERAL_CATCH" -> List.of("insert_space_before_opening_paren_in_catch");
         case "LITERAL_FOR" -> List.of("insert_space_before_opening_paren_in_for");
         case "LITERAL_IF" -> List.of("insert_space_before_opening_paren_in_if");
         case "LITERAL_RETURN" -> List.of("insert_space_before_parenthesized_expression_in_return");
-        case "LITERAL_SYNCHRONIZED" -> List.of(
-                "insert_space_before_opening_paren_in_synchronized");
-        case "LITERAL_WHILE" -> List.of("insert_space_before_opening_paren_in_while");
-        default -> Collections.emptyList();
+        case "LITERAL_SYNCHRONIZED" -> List.of("insert_space_before_opening_paren_in_synchronized");
+        case "LITERAL_WHILE", "DO_WHILE" -> List.of("insert_space_before_opening_paren_in_while");
+        case "LITERAL_SWITCH" -> List.of("insert_space_before_opening_paren_in_switch");
+        case "SLIST" -> List.of("insert_space_before_opening_brace_in_block");
+        case "TYPE_EXTENSION_AND" -> List.of("insert_space_before_and_in_type_parameter",
+                "insert_space_after_and_in_type_parameter");
+        case "LAMBDA" -> List.of("insert_space_before_lambda_arrow",
+                "insert_space_after_lambda_arrow");
+        case "ELLIPSIS" -> List.of("insert_space_before_ellipsis", "insert_space_after_ellipsis");
+        case "WILDCARD_TYPE" -> List.of("insert_space_before_question_in_wildcard",
+                "insert_space_after_question_in_wildcard");
+        default -> List.of();
       };
       settings.forEach(setting -> userFormatterSetting(setting, "insert"));
     }
